--- a/RentMyWrox/Views/UserDemographics/Index.cshtml
+++ b/RentMyWrox/Views/UserDemographics/Index.cshtml
@@ -32,32 +32,36 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Birthdate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Gender)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.MaritalStatus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateMovedIntoArea)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OwnHome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalPeopleInHome)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>
-    </tr>
-}
+    @if (Model != null)
+    {
+        foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Birthdate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Gender)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaritalStatus)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateMovedIntoArea)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OwnHome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPeopleInHome)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                </td>
+            </tr>
+        }
+    }
 
 </table>
