Finished "Consistent Page Layout with Master Pages" from Chapter 7

--- a/RentMyWrox/Views/UserDemographics/Index.cshtml
+++ b/RentMyWrox/Views/UserDemographics/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<RentMyWrox.Models.UserDemographics>
 
 @{
+    Layout = "../Shared/_MVCLayout.cshtml";
     ViewBag.Title = "Index";
 }
 
